<resources>
    <string name="app_name">Login</string>

    <string name="imgdescrip">Fondo de pantalla superior</string>
    <string name="title1">ACCEDISTE A LA APP DE SISTEMA DE VIGILANCIA DE MATERNIDAD</string>
    <string name="st1">INICIO DE SESIÓN</string>
    <string name="inputDNI">POR FAVOR INGRESE SU DNI</string>
    <string name="hintDNI">76543210</string>
    <string name="btnin">INGRESAR</string>
    <string name="title_activity_welcome">activity_welcome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>